Deleting openapi files. so i can focus on react redux and spring boot
