# src/generated/java/com/portfolio/renter/api/ReservationApi.java
@@ -1,53 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (4.2.3).
- * https://openapi-generator.tech Do not edit the class manually.
- */
-package com.portfolio.renter.api;
-
-import com.portfolio.renter.api.model.ApartmentDTO;
-import io.swagger.annotations.*;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-
-@Validated
-@Api(value = "Reservation", description = "the Reservation API")
-public interface ReservationApi {
-
-  /**
-   * POST /reservations/{id} : Add a new reservation
-   *
-   * @param id Id of apartment (required)
-   * @param apartmentDTO (required)
-   * @return Apartment successfully created (status code 201) or Invalid input (status code 405)
-   */
-  @ApiOperation(
-      value = "Add a new reservation",
-      nickname = "addReservation",
-      notes = "",
-      response = ApartmentDTO.class,
-      tags = {
-        "reservation",
-      })
-  @ApiResponses(
-      value = {
-        @ApiResponse(
-            code = 201,
-            message = "Apartment successfully created",
-            response = ApartmentDTO.class),
-        @ApiResponse(code = 405, message = "Invalid input")
-      })
-  @RequestMapping(
-      value = "/reservations/{id}",
-      produces = {"application/json"},
-      consumes = {"application/json"},
-      method = RequestMethod.POST)
-  ResponseEntity<ApartmentDTO> addReservation(
-      @Min(0) @ApiParam(value = "Id of apartment", required = true) @PathVariable("id") Integer id,
-      @ApiParam(value = "", required = true) @Valid @RequestBody ApartmentDTO apartmentDTO);
-}
